--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -12,9 +12,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:text="Ваше имя:"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="38dp" />
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/lastnametxt"
@@ -23,9 +25,11 @@
         android:layout_gravity="left|center_vertical"
         android:layout_marginTop="36dp"
         android:text="Ваша фамилия: "
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nametxt"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="38dp" />
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/back_button"
@@ -35,7 +39,9 @@
         android:layout_marginTop="60dp"
         android:onClick="back"
         android:text="Назад"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lastnametxt"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="38dp" />
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
